# WatchCpp

./: .travis.yml  CMakeLists.txt  README.md  Watcher.cpp  Watcher.h  main.cpp
src/: Watcher.cpp
test/integration/: main.cpp  test_watch_file.cpp
